<resources>
    <string name="app_name">MFO Login App</string>
    <string name="welcome">Welcome!</string>
    <string name="welcome_msg">Select a difficulty</string>
    <string name="login">Start</string>
    <string name="register">5</string>
    <string name="not_a_member">"You have "</string>
    <string name="are_you_member">Are you member? </string>
    <string name="email">Number</string>
    <string name="password">Password</string>
    <string name="password_again">Password Again</string>
    <string name="reveal">Play Again!</string>
    <string name="congratulations">Congratulations!</string>
    <string name="click">Click it </string>
    <string name="times">You won in</string>
    <string name="register_successful">Successfully Registered!</string>
    <string name="passwords_doesnt_match">Passwords Doesn\'t Match!</string>
    <string name="fill_blanks">Please pick a number!</string>
    <string name="email_error">E-Mail is not valid</string>
    <string name="short_password">Password should be at least 8 chars.</string>
    <string name="server_error">Problem occurred in server :( Please try again later.</string>
    <string name="logout">Log Out</string>
    <string name="username">Username</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="difficulty_number">1 - 100</string>
    <string name="guess_the_number">Guess the Number!</string>
    <string name="check">Check!</string>
    <string name="chances">" chances"</string>
    <string name="score">5</string>
    <string name="tries">tries!</string>
    <string name="number_was">The number was</string>
    <string name="you_lost">You Lost!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="oops">Oops!!</string>
</resources>