<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_down"
    tools:context=".Game">

    <TextView
        android:id="@+id/loginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="92dp"
        android:text="@string/guess_the_number"
        android:textColor="@color/gray"
        android:textSize="35sp"
        app:fontFamily="@font/bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/loginLoginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="162dp"
        android:layout_marginEnd="162dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/button"
        android:focusable="false"
        android:paddingLeft="25sp"
        android:paddingRight="25sp"
        android:text="@string/check"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:fontFamily="@font/bold"
        app:layout_constraintBottom_toTopOf="@+id/loginNotAmemberText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/loginRegisterText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:text="@string/register"
        android:textColor="@color/red"
        android:textSize="14sp"
        app:fontFamily="@font/bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/loginChances"
        app:layout_constraintStart_toEndOf="@+id/loginNotAmemberText" />

    <TextView
        android:id="@+id/loginNotAmemberText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="143dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="48dp"
        android:text="@string/not_a_member"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:fontFamily="@font/regular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/loginRegisterText"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/loginChances"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="147dp"
        android:layout_marginBottom="48dp"
        android:text="@string/chances"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:fontFamily="@font/regular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/loginRegisterText" />

    <EditText
        android:id="@+id/loginUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:autofillHints="username"
        android:background="@drawable/text_input"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/email"
        android:inputType="number"
        android:textColor="@color/white"
        android:textColorHint="@color/grayTransparent"
        app:layout_constraintBottom_toTopOf="@+id/loginLoginButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/arrow" />

    <ImageView
        android:id="@+id/arrow"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/guess_the_number"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_round_keyboard_arrow_up_24" />

</androidx.constraintlayout.widget.ConstraintLayout>